--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@storybook/addon-actions": "^6.4.12",
     "@storybook/addon-essentials": "^6.4.12",
     "@storybook/addon-links": "^6.4.12",
+    "@storybook/addons": "^6.5.15",
     "@storybook/builder-webpack5": "^6.4.12",
     "@storybook/cli": "^6.4.12",
     "@storybook/manager-webpack5": "^6.4.12",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^6.4.12",
+    "@storybook/theming": "^6.5.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "babel-loader": "^9.1.0",
@@ -63,6 +65,7 @@
     "fork-ts-checker-webpack-plugin": "7.2.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-refresh": "0.0.0-experimental-fabef7a6b-20221215"
+    "react-refresh": "0.0.0-experimental-fabef7a6b-20221215",
+    "storybook-code-panel": "^0.2.1"
   }
 }
