--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@storybook/addon-storysource": "7.0.0-beta.12",
     "antd": "5.0.7",
     "clsx": "^1.2.1",
